<resources>
    <string name="app_name">RetrofitExample</string>
    <string name="if_you_are_new_user">If you are a new user,</string>
    <string name="please_request_for">please request for access from your supervisor</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">User name or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="next_str">NEXT</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_user_capital">USERNAME</string>

    <string name="new_confirm_not_match">Your new and confirm password do not match.</string>
    <string name="enter_more_than_six_character">Please enter password more than six character</string>
    <string name="confirm_pswd_required">Please confirm your new password.</string>
    <string name="new_password_required">Please enter your new password.</string>
    <string name="confirm_new_password_required">Please confirm your new password.</string>
    <string name="old_password_required">Please enter your old password.</string>
    <string name="password_error">Password more than six character required.</string>
    <string name="password">Password</string>
    <string name="password_capital">PASSWORD</string>
</resources>
